Make new tournament result names default values language dependent

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -190,6 +190,14 @@
         "result_names": "Result names",
         "starts_at": "Starts at"
       }
+    },
+    "values": {
+      "tournament": {
+        "result_names": {
+          "points": "Points",
+          "win": "Win"
+        }
+      }
     }
   },
   "pages": {
